; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_display_server.c_video_display_server_get_resolution_list.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..gfxvideo_display_server.c_video_display_server_get_resolution_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i32, i32*)* }

@current_display_server = common dso_local global %struct.TYPE_2__* null, align 8
@current_display_server_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @video_display_server_get_resolution_list(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = call i64 (...) @video_display_server_has_resolution_list()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_display_server, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i8* (i32, i32*)*, i8* (i32, i32*)** %8, align 8
  %10 = load i32, i32* @current_display_server_data, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i8* %9(i32 %10, i32* %11)
  store i8* %12, i8** %2, align 8
  br label %14

13:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %14

14:                                               ; preds = %13, %6
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i64 @video_display_server_has_resolution_list(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
